improved activities view

--- a/app/views/activities.scala.html
+++ b/app/views/activities.scala.html
@@ -12,106 +12,121 @@
       </div>
     </header>       
     <div class="wrapper">         
-      <div class="col-lg-3"></div>
-      <div class="col-lg-9">         
-        <div class="row mtbox">
-          <div class="col-md-2 col-sm-2 col-md-offset-2 box0">
-            <div class="box1">
-			   <a href="/index"><span class="fa fa-dashboard"></span><h4>Dashboard</h4></a>
-            </div>
-          </div>
-          <div class="col-md-2 col-sm-2 box0">
-            <div class="box1">
-			  <a href="/reports"><span class="fa fa-file-text"></span><h4>Reports</h4></a>
-            </div>
-          </div>
-          <div class="col-md-2 col-sm-2 box0">
-            <div class="box1">
-			  <a href="/activities"><span class="fa fa-calendar"></span><h4>Activities</h4></a>
-            </div>
-          </div>
-          <div class="col-md-2 col-sm-2 box0">
-            <div class="box1">
-			  <a href="/friends"><span class="fa fa-users"></span><h4>Friends</h4></a>
-            </div>
-          </div>
-        </div>  	
-        <div class="centered">
-	      <h2>My Activity Totals</h2>
-	    </div>	         
-        <div class="row mt">
-          <div class="col-md-4 col-sm-4 mb">
-            <div class="activities-white-panel pn">
-              <div class="white-header">
-		        <h5>TOTAL MI</h5>
-              </div>
-			  <div class="row">
-			    <div class="col-sm-6 col-xs-6 goleft">
-				  <p><i class="fa fa-road"></i></p>
-				</div>
-				<div class="col-sm-6 col-xs-6"></div>
-	          </div>
-	          <div class="centered">
-                <h2>0</h2>
-	          </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 mb">
-            <div class="activities-white-panel pn">
-              <div class="white-header">
-		        <h5>TOTAL ACTIVITIES</h5>
-              </div>
-			<div class="row">
-			  <div class="col-sm-6 col-xs-6 goleft">
-		        <p><i class="fa fa-car"></i></p>
-		      </div>
-		      <div class="col-sm-6 col-xs-6"></div>
-	        </div>
-	        <div class="centered">
-              <h2>0</h2>
-	        </div>
+      <div class="col-lg-3 ds">
+		<h2>ACTIVITIES</h2>                          
+        <div class="desc">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <td><strong>Date</strong></td>
+                <td><strong>Activity Type</strong></td>
+                <td><strong>Distance</strong></td>
+              </tr>
+            </thead>
+          <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr> 
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="col-lg-9">         
+      <div class="row mtbox">
+        <div class="col-md-2 col-sm-2 col-md-offset-2 box0">
+          <div class="box1">
+	        <a href="/index"><span class="fa fa-dashboard"></span><h4>Dashboard</h4></a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-4 mb">
+        <div class="col-md-2 col-sm-2 box0">
+          <div class="box1">
+	        <a href="/reports"><span class="fa fa-file-text"></span><h4>Reports</h4></a>
+          </div>
+        </div>
+        <div class="col-md-2 col-sm-2 box0">
+          <div class="box1">
+	        <a href="/activities"><span class="fa fa-calendar"></span><h4>Activities</h4></a>
+          </div>
+        </div>
+        <div class="col-md-2 col-sm-2 box0">
+          <div class="box1">
+	        <a href="/friends"><span class="fa fa-users"></span><h4>Friends</h4></a>
+          </div>
+        </div>
+      </div>  	
+      <div class="centered">
+	    <h2>Activity name Details</h2>
+	  </div>	         
+      <div class="row mt">
+        <div class="col-md-3 col-sm-3 mb">
           <div class="activities-white-panel pn">
             <div class="white-header">
-		      <h5>TOTAL CALORIES</h5>
+		      <h5>KM</h5>
             </div>
 			<div class="row">
-			  <div class="col-sm-6 col-xs-6 goleft">
-		        <p><i class="fa fa-fire"></i> 122</p>
+			  <div class="col-sm-3 col-xs-3 goleft">
+		        <p><i class="fa fa-road"></i></p>
 		      </div>
-		      <div class="col-sm-6 col-xs-6"></div>
-	        </div>
-	        <div class="centered">
-              <h2>0</h2>
+		      <div class="col-sm-6 col-xs-6"><h2>0</h2></div>
 	        </div>
           </div>
         </div>
-      </div>
-      <div class="centered">
-	    <h2>Recent Activities</h2>
-	  </div>
-      <div class="row">
-        <div class="col-md-12 mb">
-          <div class="darkblue-panel pn">
-            <div class="darkblue-header">
-			  <h5>STATICS</h5>
+        <div class="col-md-3 col-sm-3 mb">
+          <div class="activities-white-panel pn">
+            <div class="white-header">
+		      <h5>DURATION</h5>
             </div>
-            <p>Date example</p>
-			<footer>
-			  <div class="pull-left">
-		        <h5><i class="fa fa-hdd-o"></i> ll</h5>
-		      </div>
-		      <div class="pull-right">
-			    <h5>Number</h5>
-		      </div>
-		    </footer>
-          </div>
-	    </div>
+	      <div class="row">
+	        <div class="col-sm-3 col-xs-3 goleft">
+		      <p><i class="fa fa-clock-o"></i></p>
+		    </div>
+		    <div class="col-sm-6 col-xs-6"><h2>0</h2></div>
+	      </div>
+        </div>
       </div>
-	</div>
+      <div class="col-md-3 col-sm-3 mb">
+        <div class="activities-white-panel pn">
+          <div class="white-header">
+		    <h5>AVERAGE SPEED</h5>
+          </div>
+	      <div class="row">
+	        <div class="col-sm-3 col-xs-3 goleft">
+		      <p><i class="fa fa-paper-plane-o"></i></p>
+		    </div>
+		    <div class="col-sm-6 col-xs-6"><h2>0</h2></div>
+	      </div>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-3 mb">
+        <div class="activities-white-panel pn">
+          <div class="white-header">
+		    <h5>CALORIES BURNED</h5>
+          </div>
+	      <div class="row">
+		    <div class="col-sm-3 col-xs-3 goleft">
+		      <p><i class="fa fa-fire"></i></p>
+		    </div>
+		    <div class="col-sm-6 col-xs-6"><h2>0</h2></div>
+	      </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 mb">
+        <div class="centered">
+          <h2>Average Speed</h2>
+	    </div>
+        <div id="chart-1" style="height: 300px;"></div>
+      <script>
+        new Chartkick.LineChart("chart-1", {"2013-02-10 00:00:00 -0800":11,"2013-02-11 00:00:00 -0800":6,"2013-02-12 00:00:00 -0800":3,"2013-02-13 00:00:00 -0800":2,"2013-02-14 00:00:00 -0800":5,"2013-02-15 00:00:00 -0800":3,"2013-02-16 00:00:00 -0800":8,"2013-02-17 00:00:00 -0800":6,"2013-02-18 00:00:00 -0800":6,"2013-02-19 00:00:00 -0800":12,"2013-02-20 00:00:00 -0800":5,"2013-02-21 00:00:00 -0800":5,"2013-02-22 00:00:00 -0800":3,"2013-02-23 00:00:00 -0800":1,"2013-02-24 00:00:00 -0800":10,"2013-02-25 00:00:00 -0800":1,"2013-02-26 00:00:00 -0800":3,"2013-02-27 00:00:00 -0800":2,"2013-02-28 00:00:00 -0800":3,"2013-03-01 00:00:00 -0800":2,"2013-03-02 00:00:00 -0800":8});
+      </script>
+    </div>
   </div>
+</div>
+</div>
+</div>
 </div>
 </div>
 <footer class="site-footer">
