--- a/public/bootstrap/css/my_style.css
+++ b/public/bootstrap/css/my_style.css
@@ -1193,6 +1193,8 @@ PANELS CONFIGURATIONS
 	text-align: center;
 	background: #ffffff;
 	color: #ccd1d9;
+	width: 150px;
+	height: 150px;
 }
 
 .activities-white-panel p {
