--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -58,12 +58,12 @@
         <div class="row mtbox">
           <div class="col-md-2 col-sm-2 col-md-offset-2 box0">
             <div class="box1">
-			  <a href="/index"><span class=" fa fa-dashboard"></span><h4>Dashboard</h4></a>
+			  <a href="/users/@user.id/index"><span class=" fa fa-dashboard"></span><h4>Dashboard</h4></a>
             </div>
           </div>
           <div class="col-md-2 col-sm-2 box0">
             <div class="box1">
-			  <a href="/reports"><span class="fa fa-file-text"></span><h4>Reports</h4></a>
+			  <a href="/users/@user.id/reports"><span class="fa fa-file-text"></span><h4>Reports</h4></a>
             </div>
           </div>
           <div class="col-md-2 col-sm-2 box0">
@@ -74,7 +74,7 @@
           
           <div class="col-md-2 col-sm-2 box0">
             <div class="box1">
-			  <a href="/friends"><span class="fa fa-users"></span><h4>Friends</h4></a>
+			  <a href="/users/@user.id/friends"><span class="fa fa-users"></span><h4>Friends</h4></a>
             </div>
           </div>
         </div>  	
@@ -121,7 +121,7 @@
             </div>
 			<div class="row">
 			  <div class="col-sm-6 col-xs-6 goleft">
-		        <p><i class="fa fa-fire"></i> 122</p>
+		        <p><i class="fa fa-fire"></i></p>
 		      </div>
 		      <div class="col-sm-6 col-xs-6"></div>
 	        </div>
