added view, controller and route for showing individual activities and jquery for clickable rows in activities view

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -35,7 +35,7 @@
         <div class="desc">
           <div class="details">
             <p>TOTAL ACTIVITIES: <br>
-              <muted>0</muted>
+              <muted>@user.activities.size</muted>
             </p>
           </div>
         </div>
@@ -110,7 +110,7 @@
 		      <div class="col-sm-6 col-xs-6"></div>
 	        </div>
 	        <div class="centered">
-              <h2>0</h2>
+              <h2>@user.activities.size</h2>
 	        </div>
           </div>
         </div>
