--- a/app/views/postactivity.scala.html
+++ b/app/views/postactivity.scala.html
@@ -25,16 +25,16 @@
               <div class="form-group">
                 <div class="btn-group" data-toggle="buttons">
                   <label class="btn btn-primary">
-                    <input type="radio" class="form-control" name="type" value="Running"><img src="@routes.Assets.at("images/running.png")" width="50" height="60"/><br>Running
+                    <input type="radio" class="form-control" name="category" value="Running"><img src="@routes.Assets.at("images/running.png")" width="50" height="60"/><br>Running
                   </label>
                   <label class="btn btn-primary">
-                    <input type="radio" class="form-control" name="type" value="Walking"><img src="@routes.Assets.at("images/walking.png")" width="50" height="60"/><br>Walking
+                    <input type="radio" class="form-control" name="category" value="Walking"><img src="@routes.Assets.at("images/walking.png")" width="50" height="60"/><br>Walking
                   </label>
                   <label class="btn btn-primary">
-                    <input type="radio" class="form-control" name="type" value="Swimming"><img src="@routes.Assets.at("images/swimming.png")" width="50" height="60"/><br>Swimming
+                    <input type="radio" class="form-control" name="category" value="Swimming"><img src="@routes.Assets.at("images/swimming.png")" width="50" height="60"/><br>Swimming
                   </label>
                   <label class="btn btn-primary">
-                    <input type="radio" class="form-control" name="type" value="Cycling"><img src="@routes.Assets.at("images/cycling.png")" width="50" height="60"/><br>Cycling
+                    <input type="radio" class="form-control" name="category" value="Cycling"><img src="@routes.Assets.at("images/cycling.png")" width="50" height="60"/><br>Cycling
                   </label>
                 </div>
               </div>
