--- a/app/views/friends.scala.html
+++ b/app/views/friends.scala.html
@@ -37,7 +37,7 @@
       </div>
       <div class="col-md-2 col-sm-2 box0">
         <div class="box1">
-	      <a href="/users/@user.id/reports"><span class="fa fa-file-text"></span><h4>Reports</h4></a>
+	      <a href="/users/@user.id/reports/all"><span class="fa fa-file-text"></span><h4>Reports</h4></a>
         </div>
       </div>
       <div class="col-md-2 col-sm-2 box0">
