created header and footer as sparate views

--- a/app/views/postactivity.scala.html
+++ b/app/views/postactivity.scala.html
@@ -3,14 +3,7 @@
 @main("Post Activity") {
 
 <div id="container" class="">     
-  <header class="header black-bg">
-    <a href="" class="logo"><b>PACEMAKER</b></a>
-    <div class="top-menu">
-      <ul class="nav pull-right top-menu">
-        <li><a class="logout" href="/logout">Logout</a></li>
-      </ul>
-    </div>
-  </header>       
+  <@header()     
   <div class="wrapper">
     <div class="col-lg-2"></div>
       <div class="col-lg-7">              
@@ -96,10 +89,6 @@
         </div>
       </div>  
     </div>
-    <footer class="site-footer">
-      <div class="text-center">
-        2015 - Pacemaker
-      </div>
-    </footer>
+    @footer()
   </div>
 }
