--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,14 +5,7 @@
 @main("Index") {
 
   <div id="container" class="">     
-    <header class="header black-bg">
-      <a href="" class="logo"><b>PACEMAKER</b></a>
-      <div class="top-menu">
-        <ul class="nav pull-right top-menu">
-          <li><a class="logout" href="/logout">Logout</a></li>
-        </ul>
-      </div>
-    </header>       
+    @header()      
     <div class="wrapper">         
       <div class="col-lg-3 ds">
         <h5 class="centered"><strong>LOGGED IN: </strong> @user.firstname @user.lastname</h5>  
@@ -146,11 +139,7 @@
     </div>
   </div>
 </div>
-<footer class="site-footer">
-  <div class="text-center">
-    2015 - Pacemaker
-  </div>
-</footer>
+@footer()
 </div>
 
 }
